--- a/PrimerParcialAplicada2/PrimerParcialAplicada2.csproj
+++ b/PrimerParcialAplicada2/PrimerParcialAplicada2.csproj
@@ -73,6 +73,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Consultas\CCuenta.aspx" />
+    <Content Include="Consultas\CDeposito.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Registros\RCuenta.aspx" />
@@ -81,6 +83,20 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Consultas\CCuenta.aspx.cs">
+      <DependentUpon>CCuenta.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Consultas\CCuenta.aspx.designer.cs">
+      <DependentUpon>CCuenta.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Consultas\CDeposito.aspx.cs">
+      <DependentUpon>CDeposito.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Consultas\CDeposito.aspx.designer.cs">
+      <DependentUpon>CDeposito.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -127,7 +143,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Consultas\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
