Primera creacion de la pantalla prestamo

--- a/PrimerParcialAplicada2/PrimerParcialAplicada2.csproj
+++ b/PrimerParcialAplicada2/PrimerParcialAplicada2.csproj
@@ -103,6 +103,7 @@
     <Content Include="Global.asax" />
     <Content Include="Registros\RCuenta.aspx" />
     <Content Include="Registros\RDeposito.aspx" />
+    <Content Include="Registros\RPrestamo.aspx" />
     <Content Include="Resources\BancoDigital.jpg" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
@@ -163,6 +164,13 @@
     </Compile>
     <Compile Include="Registros\RDeposito.aspx.designer.cs">
       <DependentUpon>RDeposito.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Registros\RPrestamo.aspx.cs">
+      <DependentUpon>RPrestamo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Registros\RPrestamo.aspx.designer.cs">
+      <DependentUpon>RPrestamo.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
