agregando entidades prestamo y detalle. agregando prestamo a dal

--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -50,6 +50,8 @@
   <ItemGroup>
     <Compile Include="Cuenta.cs" />
     <Compile Include="Deposito.cs" />
+    <Compile Include="DetallePrestamo.cs" />
+    <Compile Include="Prestamo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
