--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="DepositoRepositorio.cs" />
     <Compile Include="IRepository.cs" />
+    <Compile Include="PrestamoRepositorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositorioBase.cs" />
   </ItemGroup>
