--- a/PrimerParcialAplicada2/PrimerParcialAplicada2.csproj
+++ b/PrimerParcialAplicada2/PrimerParcialAplicada2.csproj
@@ -99,6 +99,7 @@
   <ItemGroup>
     <Content Include="Consultas\CCuenta.aspx" />
     <Content Include="Consultas\CDeposito.aspx" />
+    <Content Include="Consultas\CPrestamo.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Registros\RCuenta.aspx" />
@@ -134,6 +135,13 @@
     </Compile>
     <Compile Include="Consultas\CDeposito.aspx.designer.cs">
       <DependentUpon>CDeposito.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Consultas\CPrestamo.aspx.cs">
+      <DependentUpon>CPrestamo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Consultas\CPrestamo.aspx.designer.cs">
+      <DependentUpon>CPrestamo.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
@@ -225,7 +233,7 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Reportes\CuentaReport.rdlc" />
+    <EmbeddedResource Include="Reportes\PrestamoReport.rdlc" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
